# ScheduleFlow

./: .env  Cargo.toml  README.md  db.md  index.html  package-lock.json  package.json  todo.md  vite.config.ts
src/: Login.js  Main.js  Router.ts  Signup.js  Toast.js  Toast.ts  calendar.rs  calender_endpoint.rs  cli.rs  config.rs  database.rs  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/base/: Cargo.toml
src-tauri/base/src/: auth_util.rs  main.rs  runtime_objects.rs
src-tauri/base/src/api/: auth_api_controller.rs  calendar_api_controller.rs  mod.rs
src-tauri/base/src/db/: db_actions.rs
src-tauri/base/src/db/model/: mod.rs  user_calendar_combination.rs  user_jwt_token_combination.rs
src-tauri/base/src/db/model/simple/: mod.rs  simple_calendar.rs
src-tauri/base/src/db/repository/: component_repository.rs  jwt_token_repository.rs  property_repository.rs  user_calendar_combination_repository.rs  user_jwt_token_combination_repository.rs  user_repository.rs
src-tauri/base/src/db/service/: jwt_token_service.rs  mod.rs  property_service.rs
src-tauri/base/src/errors/: mod.rs
src-tauri/customs/: Cargo.toml
src-tauri/customs/src/: lib.rs
src-tauri/pg_driver/: Cargo.toml
src-tauri/pg_driver/src/: lib.rs
src-tauri/shared/: Cargo.toml
src-tauri/shared/src/: auth_util.rs  bencher.rs  current.rs  lib.rs  main.rs  pki_auth_key.rs  runtime_objects.rs
src-tauri/shared/src/crypto/: crypto_service.rs  mod.rs  pki_auth_key.rs  secure_storage.rs
src-tauri/shared/src/db/: db_actions.rs  mod.rs
src-tauri/shared/src/db/model/: calendar.rs  client.rs  component.rs  jwt_token.rs  mod.rs  property.rs  user.rs  user_calendar_combination.rs  user_client_combination.rs  user_jwt_token_combination.rs
src-tauri/shared/src/db/model/simple/: mod.rs  simple_calendar.rs  simple_component.rs  simple_user.rs
src-tauri/shared/src/db/repository/: calendar_repository.rs  client_repository.rs  component_repository.rs  jwt_token_repository.rs  mod.rs  property_repository.rs  user_calendar_combination_repository.rs  user_client_repository.rs  user_jwt_token_combination_repository.rs  user_repository.rs
src-tauri/shared/src/db/service/: calendar_service.rs  client_service.rs  component_service.rs  mod.rs  user_service.rs
src-tauri/shared/src/errors/: error_messages.rs  error_queue.rs  error_utils.rs  mod.rs
src-tauri/shared/src/errors/error_impl/: database_operation_failed_error.rs  no_database_connection_error.rs
src-tauri/simple_query/: Cargo.toml
src-tauri/simple_query/src/: lib.rs
src-tauri/src/: auth_util.rs  db_actions.rs  error_queue.rs  errors.rs  jwt_controller.rs  login_util.rs  main.rs  pg_driver.rs  runtime_objects.rs  table_users.rs
src-tauri/src/api/: auth_api_controller.rs  calendar_api_controller.rs
src-tauri/src/calendar/: icalendar_util.rs  mod.rs  simple_calendar.rs
src-tauri/src/cli_dep/: db_actions.rs
src-tauri/src/db/: db_actions.rs  mod.rs  pg_driver.rs  table_calendars.rs  table_components.rs  table_users.rs
src-tauri/src/db/model/: calendar.rs  calendar_component_combination.rs  calendar_property_combination.rs  component.rs  component_property_combination.rs  jwt_token.rs  mod.rs  model.rs  property.rs  table_combination.rs  user.rs  user_jwt_token_combination.rs
src-tauri/src/db/model/simple/: simple_calendar.rs  simple_component.rs
src-tauri/src/db/repository/: calendar_component_combination_repository.rs  calendar_property_combination_repository.rs  calendar_repository.rs  component_property_combination_repository.rs  component_repository.rs  jwt_token_repository.rs  mod.rs  property_repository.rs  table_combination_repository.rs  user_calendar_combination_repository.rs  user_jwt_token_combination_repository.rs  user_repository.rs
src-tauri/src/db/service/: calendar_service.rs  component_service.rs  mod.rs  table_combination_service.rs  user_service.rs
src-tauri/src/db/tables/: README.md  adapter.rs  mod.rs  table_calendars.rs  table_calendars_components.rs  table_combinations.rs  table_components.rs  table_jwt_tokens.rs  table_properties.rs  table_users.rs
src-tauri/src/errors/: error_messages.rs  error_queue.rs  error_utils.rs  mod.rs
src-tauri/src/errors/error_impl/: database_operation_failed_error.rs  mod.rs  no_database_connection_error.rs
src-tauri/test_query/: Cargo.toml
src-tauri/test_query/src/: main.rs
src-tauri/tui/: Cargo.toml
src-tauri/tui/src/: constants.rs  main.rs
src-tauri/tui/src/ui/: home_page_screen.rs  login_screen.rs  mod.rs  signup_screen.rs  tui.rs
src-tauri/tui/src/ui/screens/: home_page_screen.rs  login_screen.rs  mod.rs  screen.rs  signup_screen.rs
src-tauri/tui/src/ui/widgets/: checkbox.rs  input_field.rs  mod.rs
(+35 files in other folders)
