[package]
name = "scheduleflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7" }
crossterm = "0.27.0"
icalendar = "0.16.0"
serde = { version = "1.0.193", features = ["derive"] }
time = "0.3.30"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
postgres = "0.19.7"

[dependencies.ratatui]
version = "0.25.0"
features = ["widget-calendar"]
