[package]
name = "scheduleflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7" }
crossterm = "0.27.0"
icalendar = "0.16.0"
serde = { version = "1.0.193", features = ["derive"] }
time = "0.3.30"
dotenv = "0.15.0"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
tokio-postgres = "0.7.10"
async-trait = "0.1.77"

[dependencies.ratatui]
version = "0.26.1"
features = ["widget-calendar"]
