[package]
name = "scheduleflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["Fabian Holler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
dotenv = "0.15.0"
postgres = { version = "0.19.7", features = ["with-uuid-1"] }
uuid = { version = "1.8.0", features = ["v4"] }
icalendar = "0.16.1"
chrono = "0.4.37"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
