[package]
name = "scheduleflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["Fabian Holler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
dotenv = "0.15.0"
postgres = { version = "0.19.7", features = ["with-uuid-1"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
chrono = "0.4.37"
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
once_cell = "1.19.0"
lazy_static = "1.4.0"
sqlx = "0.8.1"
tauri-plugin-shell = "2"

# Own dependencies
pg_driver = { path = "../pg_driver" }
simple_query = { path = "../simple_query" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
