[package]
name = "scheduleflow"
version = "0.0.0"
description = "A Tauri App"
authors = ["Fabian Holler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.81"
dotenv = "0.15.0"
chrono = "0.4.37"
tauri-plugin-shell = "2"

# Own dependencies
pg_driver = { path = "../pg_driver" }
shared = { path = "../shared" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
